# libhak

./: .gitignore  AUTHORS  ChangeLog  DEVELOPERS  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  gitchangelog.sh
doc/: Doxyfile.in  Makefile.am  Makefile.in
lib/: Makefile  Makefile.am  Makefile.in  core.c  hak_core.c  libhak.h  messages.c  say.c  say.lo  sysfun.c
lib/.deps/: say.Plo
lib/.libs/: libhak.lai
lib/libhak/: Makefile.am  core.h  messages.h  sysfun.h
replace/: replace.h  strdup.c
src/: Makefile.am  Makefile.in  hak-info.c
test/: Makefile.am  Makefile.in  hak-test-core.c  test-core.c  test-sysfun.c
